# overture-schema-linkml

./: .gitignore  README.md  geometry.yaml  pyproject.toml  schema.yaml
cli/: __main__.py  main.py
generators/: geojsongen.py  sparkgen.py
known_bugs/: indirect_type.yaml
schema/: schema.yaml
